--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "capture-web",
-  "version": "0.0.1",
+  "name": "@realign-zone/capture-web",
+  "version": "0.0.2",
   "main": "src/main.js",
   "keywords": [
     "puppeteer",
